tests/idris2/basic041/expected
1/1: Building QDo (QDo.idr)
Error: While processing right hand side of test. Undefined name B.A.>>=. 

QDo.idr:19:10--19:11
 15 |     (>>=) x fy = x + (fy ())
 16 | 
 17 | test : Nat
 18 | test = B.A.do
 19 |          5
               ^

